//
//  LoginViewControllerUITest.swift
//  ProjectPertamaUITests
//
//  Created by Macbook on 05/03/24.
//

import XCTest

final class LoginViewControllerUITest: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}


import XCTest

class LoginUITests: XCTestCase {

    var app: XCUIApplication!

    override func setUpWithError() throws {
        continueAfterFailure = false
        app = XCUIApplication()
        app.launch()
    }

    func testLoginButtonTapped() throws {
        let usernameTextField = app.textFields["Username"]
        let passwordTextField = app.secureTextFields["Password"]
        let loginButton = app.buttons["Login"]

        // Mengisi username dan password
        usernameTextField.tap()
        usernameTextField.typeText("testuser")

        passwordTextField.tap()
        passwordTextField.typeText("password")

        // Men-tap tombol login
        loginButton.tap()

        // Memverifikasi bahwa setelah login, tampilan berubah sesuai dengan yang diharapkan
        XCTAssertTrue(app.staticTexts["Welcome, Test User!"].exists)
    }

}

